adding a button border

--- a/sections/0-assessment-1.liquid
+++ b/sections/0-assessment-1.liquid
@@ -27,6 +27,7 @@
     }
     .fresh-assessment-1 .button {
         background: #333;
+        border: solid red 1px;
         color: #fff;
         padding: 3px 10px;
         text-decoration: none;
